--- a/src/components/App/css/variables.css
+++ b/src/components/App/css/variables.css
@@ -21,7 +21,7 @@
 
   /* Typography */
 
-  --font-family-sans-serif:      HeronSans, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --font-family-sans-serif:      HeronSans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --font-family-monospace:       monospace;
   --font-family-base:            var(--font-family-sans-serif);
 
@@ -29,24 +29,23 @@
   --font-size-lg:                calc(var(--font-size-base) * 1.5);
   --font-size-sm:                calc(var(--font-size-base) * .875);
 
-  --font-weight-lighter:         100;
   --font-weight-light:           300;
   --font-weight-normal:          400;
-  --font-weight-bold:            600;
-  --font-weight-bolder:          bolder;
+  --font-weight-medium:          500;
+  --font-weight-bold:            bold;
 
   --font-weight-base:            var(--font-weight-lighter);
   --line-height-base:            1.5;
 
   --h1-font-size:                calc(var(--font-size-base) * 3.5);
-  --h2-font-size:                calc(var(--font-size-base) * 3.5);
+  --h2-font-size:                calc(var(--font-size-base) * 3);
   --h3-font-size:                calc(var(--font-size-base) * 2);
   --h4-font-size:                calc(var(--font-size-base) * 1.5);
   --h5-font-size:                var(--font-size-base);
 
-  --h1-font-weight:              600;
-  --h2-font-weight:              600;
-  --h3-font-weight:              500;
+  --h1-font-weight:              500;
+  --h2-font-weight:              500;
+  --h3-font-weight:              400;
 
   --headings-margin-bottom:      calc(var(--spacer) / 2);
   --headings-font-family:        inherit;
