Amend styles with font weight medium

--- a/src/components/Feature/feature.css
+++ b/src/components/Feature/feature.css
@@ -130,6 +130,7 @@
             }
             & .sub-description {
               max-width: 360px;
+              font-weight: var(--font-weight-light);
             }
           }
           & .card-grid {
